Collection API Улучшения[#210097]