@@ -14,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsTo9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] expect =  {{1, 2, 3}, {4, 5, 6}, {7, 0, 0}};
-        assertThat(list.toArray(Arrays.asList(1, 2, 3, 4, 5, 6, 7), 3),
+        assertThat(list.toArray(List.of(1, 2, 3, 4, 5, 6, 7), 3),
                 is(expect));
     }
 }
