@@ -12,10 +12,11 @@ import static org.junit.Assert.assertThat;
 public class FullSearchTest {
     @Test
     public void extractNumbersTest() {
-        List<Task> tasks = Arrays.asList(
+        List<Task> tasks = List.of(
                 new Task("1", "One"),
                 new Task("2", "Two"),
                 new Task("1", "One"));
-        assertThat(FullSearch.extractNumbers(tasks), is(new HashSet<>(Arrays.asList("1", "2"))));
+        assertThat(FullSearch.extractNumbers(tasks),
+                is(new HashSet<>(List.of("1", "2"))));
     }
 }
